# NovaCare-Guardian-SuperApp

./: .env.example  README.md  capture_gallery.py  cli.py  export_pdf.py  pyproject.toml  record_video.py  requirements.txt  run_local.sh
data/sample/: incident_event.json
docs/: adoption_plan.md  architecture.md  blog_post_template.md  demo_video_script.md  devpost_submission_template.md  feedback_submission_template.md  judging_alignment.md  novacare_superapp_demo.webm  submission_document.html
src/: main.py
src/nova_coldchain_guardian/: __init__.py  config.py  main.py  models.py  orchestrator.py  rules.py
src/nova_coldchain_guardian/adapters/: nova_client.py  ui_automation.py
src/nova_coldchain_guardian/agents/: action_executor.py  planner.py  policy_checker.py  sensor_analyst.py  visual_auditor.py  voice_triage.py
src/nova_coldchain_guardian/config/: policy_rules.yaml
src/nova_coldchain_guardian/workflows/: incident_response.py
src/orchestrator/: workflow.py
src/ui/static/css/: style.css
src/ui/static/js/: app.js
src/ui/templates/: index.html
submission_kit/: architecture_one_pager.md  blog_post.md  demo_script.md  devpost_submission.md  execution_checklist.md  feedback_submission.md  impact_model.md  judging_blueprint.md  strategy_brief.md
tests/: test_workflow.py
